# legacy-purview-backup-sample

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
pvsnapshot/: env.py  model.py  repository.py  service.py  test_model.py
pvsnapshot/property/: __init__.py  env.py
