[tool.poetry]
name = "legacy-purview-backup-sample"
version = "0.1.0"
description = ""
authors = ["Hiroki Mizukami <hmizukami@microsoft.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
